--- a/Day2/To_do_List_App/templates/todo_list.html
+++ b/Day2/To_do_List_App/templates/todo_list.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     {% for todo in data %}
-        <li><a href="{% url 'todo_info' todo.id %}">{{ todo.title }}</a></li> <!-- urls 에서 name 명칭이 todo_info 찾아서 url을 가져와 / + todo.id 값을 합쳐준다  여기서 url은 reverse()같은 효과를 준다-->
+        <li><a href="{% url 'todo_info' todo.id %}">{{ todo.title }}</a></li>
+        {# urls 에서 name 명칭이 todo_info 찾아서 url을 가져와 / + todo.id 값을 합쳐준다  여기서 url은 reverse()같은 효과를 준다 #}
     {% endfor %}
 </body>
 </html>
