--- a/To_do_List_App/templates/accounts/login.html
+++ b/To_do_List_App/templates/accounts/login.html
@@ -9,6 +9,9 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button>로그인</button>
+        <span>
+            <a href="{% url 'signup' %}">회원가입</a>
+        </span>
     </form>
 
 </body>
