--- a/To_do_List_App/templates/accounts/login.html
+++ b/To_do_List_App/templates/accounts/login.html
@@ -10,7 +10,7 @@
         {{ form.as_p }}
         <button>로그인</button>
         <span>
-            <a href="{% url 'signup' %}">회원가입</a>
+            <button onclick="location.href='{% url "signup" %}'">회원가입</button>
         </span>
     </form>
 
