--- a/To_do_List_App/templates/base.html
+++ b/To_do_List_App/templates/base.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
 <body>
     <nav style="display: flex;justify-content: space-between">
-        <a href="{% url 'todo_list' %}">홈</a>
+        <button onclick="location.href='{% url "todo:cbv_todo_list" %}'">홈</button>
         <div style="text-align: right">
             {% if request.user.is_authenticated %}
                 <form action="{% url 'logout' %}" method="POST" style="text-align: right">
                     {% csrf_token %}
                     {{ request.user.username }}
                     <button>로그아웃</button>
-                    <a href="{% url 'todo_create' %}">추가</a>
                 </form>
             {% else %}
-                <div style="text-align: right">
-                    <a href="{% url 'signup' %}">회원가입</a>
-                    <a href="{% url 'login' %}">로그인</a>
+                <div style="text-align: right; display: flex; justify-content: right">
+                    <button onclick="location.href='{% url "signup" %}'" style="margin-right: 10px">회원가입</button>
+                    <button onclick="location.href='{% url "login" %}'">로그인</button>
                 </div>
             {% endif %}
         </div>
