--- a/To_do_List_App/templates/todo/todo_list.html
+++ b/To_do_List_App/templates/todo/todo_list.html
@@ -1,7 +1,48 @@
 {% extends 'base.html' %}
+{% block extra_css %}
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            padding: 10px;
+            margin: 5px 0;
+            background: #eaeaea;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        li:hover {
+            background: #d4d4d4;
+        }
+        a {
+            text-decoration: none;
+            color: #333;
+        }
+    </style>
+{% endblock %}
 {% block content %}
+    <div  class="container" style="margin-top:15px">
     {% if request.user.is_authenticated %}
-        <div style="text-align: right; padding-top:10px">
+        <div style="text-align: right;">
             <button onclick="location.href='{% url "todo:cbv_todo_create" %}'">추가</button>
         </div>
         {% for todo in object_list %}
@@ -44,4 +85,5 @@
     {% else %}
         <p>로그인 인원만 리스트를 보는게 가능합니다.</p>
     {% endif %}
+    </div>
 {% endblock %}
