--- a/To_do_List_App/templates/todo/todo_info.html
+++ b/To_do_List_App/templates/todo/todo_info.html
@@ -73,7 +73,7 @@
         </div>
         <table>
             {% for key, value in todo.items %}
-                {% if key != 'title' and key != 'id' and key != '_state' and key != 'user_id' %}
+                {% if key != 'title' and key != 'id' and key != '_state' and key != 'user_id' and key != '_prefetched_objects_cache' %}
                     <tr>
                         <th>{{ key }}</th>
                         <td>{{ value }}</td>
@@ -82,4 +82,54 @@
             {% endfor %}
         </table>
     </div>
+    <div>
+        <form method="post" action="{% url 'todo:comment_create' todo.id %}">
+            {% csrf_token %}
+            {{ comment_form.as_p }}
+            <button class="btn btn-primary">댓글달기</button>
+        </form>
+    <ul class="list-unstyled" id="comment_wrapper">
+    {% for comment in page_obj %}
+        <li class="comment-list-item container-fluid">
+            <div class="ps-2 d-flex justify-content-between align-items-center">
+                <p class="mb-0">{{ comment.user }}</p>
+                {% if request.user == comment.user or request.user.is_staff %}
+                <div class="text-decoration-none a-group">
+                    <form method="POST" action="{% url 'todo:comment_delete' comment.id %}">
+                        {% csrf_token %}
+                        <div class="btn-group-sm">
+                            <button class="btn btn-primary" type="button" onclick="modify_view({{ comment.id }})">수정하기</button>
+                            <button type=submit class="btn btn-danger">삭제하기</button>
+                        </div>
+                    </form>
+                </div>
+                {% endif %}
+            </div>
+            <hr>
+            <div>
+                <p class="p-lg-2">{{ comment.message }}</p>
+                <p class="text-end">{{ comment.created_at }}</p>
+            </div>
+            <form id="comment_modify_form_{{ comment.id }}" style="display: none" method="POST" action="{% url 'todo:comment_update' comment.id %}">
+                {% csrf_token %}
+                {{ comment_form.as_p }}
+                <button class="btn btn-primary btn-sm">수정하기</button>
+            </form>
+        </li>
+    {% endfor %}
+    </ul>
+    {% include 'todo/pagination.html' with fragment='comment_wrapper' %}
+    </div>
+    <hr>
+    <a class="btn btn-primary" href="{% url 'todo:cbv_todo_list' %}">목록</a>
+    <script>
+        function modify_view(commentId) {
+        const modifyForm = document.getElementById(`comment_modify_form_${commentId}`);
+        if (modifyForm.style.display === "none") {
+            modifyForm.style.display = ""
+        } else if (modifyForm.style.display === "") {
+            modifyForm.style.display = "none"
+        }
+    }
+    </script>
 {% endblock %}
