--- a/To_do_List_App/templates/todo/todo_info.html
+++ b/To_do_List_App/templates/todo/todo_info.html
@@ -73,7 +73,7 @@
         </div>
         <table>
             {% for key, value in todo.items %}
-                {% if key != 'title' and key != 'id' and key != '_state' and key != 'user_id' and key != '_prefetched_objects_cache' %}
+                {% if key != 'title' and key != 'id' and key != '_state' and key != 'user_id' and key != '_prefetched_objects_cache' and key != 'thumbnail'%}
                     <tr>
                         <th>{{ key }}</th>
                         <td>{{ value }}</td>
